# nanoGrad

./: CMakeLists.txt  CpuStorage.hpp  Enums.hpp  GradFn.hpp  OpenClContext.hpp  Registry.cpp  Registry.hpp  Tensor.cpp  Tensor.hpp  build.ps1  dispatch.hpp  fill_kernels.hpp  main.cpp  todo.txt
kernels/: add_kernels.hpp  fill_kernels.hpp  kernel_templates.hpp  read_kernels.hpp  write_kernel.hpp
openclKernels/: mm.cl  softmax.cl
storage/: CpuStorage.hpp  GPUStorage.hpp  Storage.hpp
